{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player",
            "id": "1d0838cc-f543-45bc-aa8e-e481c481bace",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "395ccddb-7ff0-4377-8ab8-440532ba0c4c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveLeft",
                    "type": "Button",
                    "id": "14106340-9c49-45bf-bc82-b15881dbba31",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveRight",
                    "type": "Button",
                    "id": "f4d4d4d4-4e12-4e28-95c4-3ba5f5154436",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "35cb66d1-b640-46c5-9012-f1afe5e5f5d9",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e00cc918-ac5e-42c8-b881-466554101871",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d829b481-d17a-4f37-84e0-1a00ad83155c",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}